fix bug data de inicio ano letivo

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
 <!-- jQuery -->
 <script src="{% static 'admin_lte/plugins/jquery/jquery.min.js' %}"></script>
 <!-- my jQuery -->
-<script src="{% static 'myJS/homepage1.js' %}"></script>
+<script src="{% static 'myJS/homepage.js' %}"></script>
 <!-- Bootstrap 4 -->
 <script src="{% static 'admin_lte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <!-- AdminLTE App -->
