listagem dos feriados no results.html

--- a/templates/aulas_previstas/results.html
+++ b/templates/aulas_previstas/results.html
@@ -213,7 +213,7 @@
                             <div class="card-header">
                                 <h3 class="card-title">
                                     <i class="fas fa-fan"></i>
-                                    Feriados municipal e fixos
+                                    Feriados
                                 </h3>
                                 <div class="card-tools">
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -225,36 +225,48 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <p class="card-text">
-                                    Some quick example text to build on the card title and make up the bulk of the card's
-                                    content.
+                                <p class="card-text font-weight-bold">
+                                    Feriado municipal de {{ feriado_municipal.concelho }}:
+                                </p>
+
+                                <table class="table text-center table-bordered table-striped">
+
+                                    <thead>
+                                        <tr>
+                                            <th> Feriado</th>
+                                            <th> Dia</th>
+                                            <th> Dia da semana</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>{{ feriado_municipal.name}}</td>
+                                            <td>{{ feriado_municipal.data|date:"j b Y"}}</td>
+                                            <td>{{ feriado_municipal.data|date:"l"}}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                                <br>
+                                <p class="card-text font-weight-bold">
+                                    Feriados Nacionais:
                                 </p>
                                 <table class="table text-center table-bordered table-striped">
                                     <thead>
-                                    <tr>
-                                        <th> Feriado</th>
-                                        <th> Dia</th>
-                                        <th> Dia da semana</th>
-                                    </tr>
+                                        <tr>
+                                            <th> Feriado</th>
+                                            <th> Dia</th>
+                                            <th> Dia da semana</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                    {% for f in lista_feriados %}
-                                    <tr>
-                                        <td>Ano novo</td>
-                                        <td>{{ f|date:"d M Y" }}</td>
-                                        <td>{{ f|date:"l" }}</td>
-                                    </tr>
-                                    {% endfor %}
-                                    <tr>
-                                        <td>Dia da Liberdade</td>
-                                        <td>25/04/2023</td>
-                                        <td>5ªfeira</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Dia do trabalhador</td>
-                                        <td>1/5/2023</td>
-                                        <td>6ªFeira</td>
-                                    </tr>
+                                        {% for f in feriados_nacionais %}
+                                            <tr>
+                                                <td>{{ f.name }}</td>
+                                                <td>{{ f.data|date:"j b Y" }}</td>
+                                                <td>{{ f.data|date:"l" }}</td>
+                                            </tr>
+                                        {% endfor %}
                                     </tbody>
                                 </table>
 
