--- a/templates/aulas_previstas/results.html
+++ b/templates/aulas_previstas/results.html
@@ -92,7 +92,7 @@
                             <div class="card-header">
                                 <h3 class="card-title">
                                     <i class="fas fa-fan"></i>
-                                    Calendário escolar
+                                    Calendário Escolar
                                 </h3>
                                 <div class="card-tools">
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -141,9 +141,6 @@
                         </div>
                         <!-- /.card -->
                     </div>
-
-
-
 
 
 
@@ -207,7 +204,6 @@
                 </div>
 
                 <div class="row">
-
                     <div class="col-lg-6">
                         <div class="card card-success">
                             <div class="card-header">
