formatação html do separador calendário escolar

--- a/templates/aulas_previstas/results.html
+++ b/templates/aulas_previstas/results.html
@@ -27,18 +27,7 @@
         <!-- Main content -->
         <div class="content">
             <div class="container">
-                <div class="row  text-center">
-                    <div class="col-lg-4">
-                        <h5><b>Ano Letivo:</b> {{ ano_letivo }}</h5>
-                    </div>
-                    <div class="col-lg-4">
-                        <h5><b>Disciplina:</b> {{ disciplina }}</h5>
-                    </div>
-                    <div class="col-lg-4">
-                        <h5><b>Nível de ensino:</b> {{ escolaridade }}</h5>
 
-                    </div>
-                </div>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="card card-fuchsia">
@@ -51,15 +40,31 @@
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
                                         <i class="fas fa-minus"></i>
                                     </button>
-                                    <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
-                                        <i class="fas fa-times"></i>
-                                    </button>
                                 </div>
                             </div>
+
                             <div class="card-body table-responsive">
+
+                                <div class="row  text-center">
+                                    <div class="col-lg-4">
+                                        <p><b>Ano Letivo:</b> {{ ano_letivo }}</p>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <p><b>Disciplina:</b> {{ disciplina }}</p>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <p><b>Nível de ensino:</b> {{ escolaridade }}</p>
+                                    </div>
+                                </div>
+
                                 <p class="card-text">
-                                    Tabela com o número de dias de aulas e número aulas previstas calculados a partir da carga semanal, introduzida pelo utilizador.
+                                    <ul>
+                                        <li>
+                                            <i>Tabela com o número de dias de aulas e número aulas previstas calculados a partir da carga semanal.</i>
+                                        </li>
+                                    </ul>
                                 </p>
+
 
                                 {% if disciplina == "anual" %}
                                     {% block tabela_disciplina_anual %}
@@ -72,6 +77,7 @@
                                         {% include 'aulas_previstas/templatetags/tabela_previstas_disciplina_semestral.html' %}
                                     {% endblock %}
                                 {% endif %}
+                            <br>
 
                             </div>
                             <div class="card-footer clearfix">
@@ -88,7 +94,7 @@
                 <div class="row">
 
                     <div class="col-lg-6">
-                        <div class="card card-primary">
+                        <div class="card card-primary collapsed-card">
                             <div class="card-header">
                                 <h3 class="card-title">
                                     <i class="fas fa-fan"></i>
@@ -96,7 +102,7 @@
                                 </h3>
                                 <div class="card-tools">
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                                        <i class="fas fa-minus"></i>
+                                        <i class="fas fa-plus"></i>
                                     </button>
                                     <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
                                         <i class="fas fa-times"></i>
@@ -104,33 +110,44 @@
                                 </div>
                             </div>
                             <!-- /.card-header -->
-                            <div class="card-body">
-                                <p class="card-text">
-                                    ano letivo: xxxx/xxxx - anos de escolaridade: Pré escolar e .
-                                </p>
+                            <div class="card-body" >
+                                <p class="text-center"><b>Ano Letivo:</b> {{ ano_letivo }}</p>
+
+                                <p><b>Períodos letivos:</b></p>
 
                                 <table class="table text-center table-bordered table-striped">
                                     <thead>
                                     <tr>
-                                        <th> Dia</th>
-                                        <th> Dia da semana</th>
+                                        <th class="border-top" colspan="3" > Aulas</th>
+                                    </tr>
+                                    <tr>
+                                        <th> Períodos</th>
+                                        <th> Início</th>
+                                        <th> Fim</th>
+
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>20/2/2023</td>
-                                        <td>2ªfeira</td>
+                                        <td>1º</td>
+                                        <td>21/2/2023</td>
                                     </tr>
                                     <tr>
+                                        <td>2º</td>
                                         <td>21/2/2023</td>
                                         <td>3ªfeira</td>
                                     </tr>
                                     <tr>
+                                        <td>3º</td>
                                         <td>22/2/2023</td>
                                         <td>4ªFeira</td>
                                     </tr>
                                     </tbody>
                                 </table>
+                                <br>
+                                <p><b>Pausas letivas:</b></p>
+
+
                             </div>
                             <!-- /.card-body -->
                             <div class="card-footer clearfix">
@@ -145,7 +162,7 @@
 
 
                     <div class="col-lg-6">
-                        <div class="card card-purple">
+                        <div class="card card-purple collapsed-card">
                             <div class="card-header">
                                 <h3 class="card-title">
                                     <i class="fas fa-fan"></i>
@@ -153,7 +170,7 @@
                                 </h3>
                                 <div class="card-tools">
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                                        <i class="fas fa-minus"></i>
+                                        <i class="fas fa-plus"></i>
                                     </button>
                                     <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
                                         <i class="fas fa-times"></i>
@@ -205,7 +222,7 @@
 
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="card card-success">
+                        <div class="card card-success collapsed-card">
                             <div class="card-header">
                                 <h3 class="card-title">
                                     <i class="fas fa-fan"></i>
@@ -213,7 +230,7 @@
                                 </h3>
                                 <div class="card-tools">
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                                        <i class="fas fa-minus"></i>
+                                        <i class="fas fa-plus"></i>
                                     </button>
                                     <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
                                         <i class="fas fa-times"></i>
@@ -277,15 +294,15 @@
 
 
                     <div class="col-lg-6">
-                        <div class="card card-orange">
+                        <div class="card card-orange collapsed-card">
                             <div class="card-header">
                                 <h3 class="card-title">
                                     <i class="fas fa-fan"></i>
-                                    Carnaval
+                                    Dados do formulário
                                 </h3>
                                 <div class="card-tools">
                                     <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                                        <i class="fas fa-minus"></i>
+                                        <i class="fas fa-plus"></i>
                                     </button>
                                     <button type="button" class="btn btn-tool" data-card-widget="remove" title="Remove">
                                         <i class="fas fa-times"></i>
